# devdocs-crawler

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/api/: __init__.py  crawl.py  health.py  search.py  stats.py
backend/src/crawler/: __init__.py  deduplicator.py  engine.py  frontier.py  indexer.py  parser.py  rate_limiter.py  robots.py  scheduler.py  url_normalizer.py  worker.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/metrics/: collector.py
backend/src/models/: __init__.py  crawl_event.py  crawl_job.py  fingerprint.py  host.py  link.py  page.py
backend/src/schemas/: crawl.py  search.py  stats.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: seed.py
